...
    "menu.unavailable": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Unavailable"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "不可用"
...
